# RayTracing

./: CMakeLists.txt
src/: bitmap.cpp  bitmap.h  color.cpp  color.h  object.cpp  object.h  scene.cpp  scene.h  tracing.cpp  tracing.h  vector.cpp  vector.h
tests/: 2dinterp.cpp  ambient1.cpp  dark1.cpp  scene1.cpp
